--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.migrator</groupId>
-  <artifactId>oracle-to-mysql-migrator</artifactId>
+  <artifactId>migrator</artifactId>
   <version>1.0</version>
 
   <dependencies>
