拆分功能模块

--- a/app/conf/migrator.properties
+++ b/app/conf/migrator.properties
@@ -1,5 +1,5 @@
-#Updated config
-#Wed Jul 09 22:39:06 CST 2025
+#Database Migration Tool Configuration
+#Wed Jul 09 23:39:02 CST 2025
 file.error=app/log/error.sql
 file.success=app/log/success.sql
 icon.path=app/conf/migrator.png
