--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                 <!-- ✅ 设置可执行 Jar 的主类 -->
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>com.migrator.Migrator</mainClass>
+                  <mainClass>com.migrator.Main</mainClass>
                 </transformer>
               </transformers>
             </configuration>
