--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,25 @@
       <version>21.1.0.0</version>
     </dependency>
 
+    <!-- ✅ HikariCP 连接池 -->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>4.0.3</version>
+    </dependency>
+
     <!-- 如果你确实需要这个 interceptor-api（如 Spring） -->
     <dependency>
       <groupId>javax.interceptor</groupId>
       <artifactId>javax.interceptor-api</artifactId>
       <version>1.2</version>
     </dependency>
-  </dependencies>
+      <dependency>
+        <groupId>com.zaxxer</groupId>
+        <artifactId>HikariCP</artifactId>
+        <version>5.0.1</version>
+    </dependency>
+</dependencies>
 
   <build>
     <plugins>
