--- a/app/conf/migrator.properties
+++ b/app/conf/migrator.properties
@@ -1,21 +1,29 @@
-#Database Migration Tool Configuration
-#Thu Jul 10 01:21:00 CST 2025
-file.error=app/log/error.sql
-file.success=app/log/success.sql
-icon.path=app/conf/migrator.png
-mapping.0=DATE->DATETIME
-mapping.1=CLOB->LONGTEXT
-mapping.2=BLOB->LONGBLOB
-migrate.dropOldTable=true
-migrate.foreignKeys=true
-mysql.dbname=test
-mysql.host=192.168.100.120
-mysql.password=root
-mysql.port=3306
-mysql.user=root
-oracle.connectMode=SID
+# Database Migration Tool Configuration
+
+# Oracle Configuration
 oracle.host=192.168.4.77
-oracle.password=oracle
 oracle.port=1521
 oracle.sid=orcl
 oracle.user=FKPT
+oracle.password=oracle
+oracle.connectMode=SID
+
+# MySQL Configuration
+mysql.host=192.168.4.77
+mysql.port=3306
+mysql.dbname=df-init
+mysql.user=df
+mysql.password=skyon@678
+
+# Type Mapping Configuration
+mapping.0=DATE->DATETIME
+mapping.1=CLOB->LONGTEXT
+mapping.2=BLOB->LONGBLOB
+
+# Other Migration Configuration
+migrate.dropOldTable=true
+migrate.foreignKeys=true
+
+# Icon and Log Configuration
+icon.path=app/conf/migrator.png
+file.log=log/
