--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,13 @@
       <artifactId>ojdbc8</artifactId>
       <version>21.1.0.0</version>
     </dependency>
-</dependencies>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.38</version>
+          <scope>provided</scope>
+      </dependency>
+  </dependencies>
 
   <build>
     <plugins>
